split process into header and source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(assign4)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(assign4 Assign4.cpp Process.h Assign4.h)
+add_executable(assign4 Assign4.cpp Process.h Assign4.h Process.cpp)
